Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.10 from Parser.y
-----------------------------------------------------------------------------


rule 19 is unused
rule 20 is unused
rule 21 is unused
rule 22 is unused

terminal "begin" is unused
terminal "function" is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Program                            (0)
	Program -> StatementList ";" "program" StatementList ";" "end" ";"   (1)
	Program -> "program" StatementList ";" "end" ";"   (2)
	StatementList -> Statement                         (3)
	StatementList -> StatementList ";" Statement       (4)
	Statement -> "set" Access "=" Expression           (5)
	Statement -> Id "(" MaybeExpressionList ")"        (6)
	Statement -> "return" Expression                   (7)
	Statement -> "if" Expression "then" StatementList ";" "else" StatementList ";" "end"   (8)
	Statement -> "if" Expression "then" StatementList ";" "end"   (9)
	Statement -> "for" Id "in" Expression "do" StatementList ";" "end"   (10)
	Statement -> "while" Expression "do" StatementList ";" "end"   (11)
	Statement -> "read" Access                         (12)
	Statement -> "print" ExpressionList                (13)
	Statement -> "use" DeclarationSeq "in" StatementList ";" "end"   (14)
	DeclarationSeq ->                                  (15)
	DeclarationSeq -> DeclarationList ";"              (16)
	DeclarationList -> Declaration                     (17)
	DeclarationList -> DeclarationList ";" Declaration   (18)
	MaybeSignature ->                                  (19)
	MaybeSignature -> Signature                        (20)
	Signature -> Declaration                           (21)
	Signature -> Signature "," Declaration             (22)
	Declaration -> TypeId Id                           (23)
	Declaration -> TypeId Id "=" Expression            (24)
	MaybeExpressionList ->                             (25)
	MaybeExpressionList -> ExpressionList              (26)
	ExpressionList -> Expression                       (27)
	ExpressionList -> ExpressionList "," Expression    (28)
	MatrixList -> ExpressionList                       (29)
	MatrixList -> MatrixList ":" ExpressionList        (30)
	Number -> num                                      (31)
	Bool -> "true"                                     (32)
	Bool -> "false"                                    (33)
	String -> string                                   (34)
	Access -> Id                                       (35)
	Id -> id                                           (36)
	TypeId -> "boolean"                                (37)
	TypeId -> "number"                                 (38)
	TypeId -> "matrix" "(" ExpressionList ")"          (39)
	TypeId -> "row" "(" Expression ")"                 (40)
	TypeId -> "col" "(" Expression ")"                 (41)
	Expression -> Number                               (42)
	Expression -> Bool                                 (43)
	Expression -> String                               (44)
	Expression -> Access                               (45)
	Expression -> "{" MatrixList "}"                   (46)
	Expression -> Expression "+" Expression            (47)
	Expression -> Expression "-" Expression            (48)
	Expression -> Expression "*" Expression            (49)
	Expression -> Expression "/" Expression            (50)
	Expression -> Expression "%" Expression            (51)
	Expression -> Expression "div" Expression          (52)
	Expression -> Expression "mod" Expression          (53)
	Expression -> Expression ".+." Expression          (54)
	Expression -> Expression ".-." Expression          (55)
	Expression -> Expression ".*." Expression          (56)
	Expression -> Expression "./." Expression          (57)
	Expression -> Expression ".%." Expression          (58)
	Expression -> Expression ".div." Expression        (59)
	Expression -> Expression ".mod." Expression        (60)
	Expression -> Expression "|" Expression            (61)
	Expression -> Expression "&" Expression            (62)
	Expression -> Expression "==" Expression           (63)
	Expression -> Expression "/=" Expression           (64)
	Expression -> Expression "<" Expression            (65)
	Expression -> Expression "<=" Expression           (66)
	Expression -> Expression ">" Expression            (67)
	Expression -> Expression ">=" Expression           (68)
	Expression -> Expression "'"                       (69)
	Expression -> "-" Expression                       (70)
	Expression -> Expression "[" ExpressionList "]"    (71)
	Expression -> "not" Expression                     (72)
	Expression -> "(" Expression ")"                   (73)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	"program"      { Lex TkProgram      _ }
	"begin"        { Lex TkBegin        _ }
	"end"          { Lex TkEnd          _ }
	"function"     { Lex TkFunction     _ }
	"return"       { Lex TkReturn       _ }
	";"            { Lex TkSemicolon    _ }
	","            { Lex TkComma        _ }
	":"            { Lex TkDoublePoint  _ }
	"boolean"      { Lex TkBooleanType  _ }
	"number"       { Lex TkNumberType   _ }
	"matrix"       { Lex TkMatrixType   _ }
	"row"          { Lex TkRowType      _ }
	"col"          { Lex TkColType      _ }
	"("            { Lex TkLParen       _ }
	")"            { Lex TkRParen       _ }
	"{"            { Lex TkLLlaves      _ }
	"}"            { Lex TkRLlaves      _ }
	"["            { Lex TkLCorche      _ }
	"]"            { Lex TkRCorche      _ }
	"if"           { Lex TkIf           _ }
	"else"         { Lex TkElse         _ }
	"then"         { Lex TkThen         _ }
	"for"          { Lex TkFor          _ }
	"do"           { Lex TkDo           _ }
	"while"        { Lex TkWhile        _ }
	"print"        { Lex TkPrint        _ }
	"read"         { Lex TkRead         _ }
	"&"            { Lex TkAnd          _ }
	"|"            { Lex TkOr           _ }
	"not"          { Lex TkNot          _ }
	"=="           { Lex TkEqual        _ }
	"/="           { Lex TkUnequal      _ }
	"<="           { Lex TkLessEq       _ }
	"<"            { Lex TkLess         _ }
	">="           { Lex TkGreatEq      _ }
	">"            { Lex TkGreat        _ }
	"+"            { Lex TkSum          _ }
	"-"            { Lex TkDiff         _ }
	"*"            { Lex TkMul          _ }
	"/"            { Lex TkDivEnt       _ }
	"%"            { Lex TkModEnt       _ }
	"div"          { Lex TkDiv          _ }
	"mod"          { Lex TkMod          _ }
	"'"            { Lex TkTrans        _ }
	".+."          { Lex TkCruzSum      _ }
	".-."          { Lex TkCruzDiff     _ }
	".*."          { Lex TkCruzMul      _ }
	"./."          { Lex TkCruzDivEnt   _ }
	".%."          { Lex TkCruzModEnt   _ }
	".div."        { Lex TkCruzDiv      _ }
	".mod."        { Lex TkCruzMod      _ }
	"="            { Lex TkAssign       _ }
	"use"          { Lex TkUse          _ }
	"in"           { Lex TkIn           _ }
	"set"          { Lex TkSet          _ }
	num            { Lex (TkNumber _)   _ }
	"true"         { Lex (TkBoolean _)  _ }
	"false"        { Lex (TkBoolean _)  _ }
	string         { Lex (TkString _)   _ }
	id             { Lex (TkId     _)   _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Program         rules 1, 2
	StatementList   rules 3, 4
	Statement       rules 5, 6, 7, 8, 9, 10, 11, 12, 13, 14
	DeclarationSeq  rules 15, 16
	DeclarationList rules 17, 18
	MaybeSignature  rules 19, 20
	Signature       rules 21, 22
	Declaration     rules 23, 24
	MaybeExpressionList rules 25, 26
	ExpressionList  rules 27, 28
	MatrixList      rules 29, 30
	Number          rule  31
	Bool            rules 32, 33
	String          rule  34
	Access          rule  35
	Id              rule  36
	TypeId          rules 37, 38, 39, 40, 41
	Expression      rules 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	"program"      shift, and enter state 15
	"return"       shift, and enter state 5
	"if"           shift, and enter state 6
	"for"          shift, and enter state 7
	"while"        shift, and enter state 8
	"print"        shift, and enter state 9
	"read"         shift, and enter state 10
	"use"          shift, and enter state 11
	"set"          shift, and enter state 12
	id             shift, and enter state 13

	Program        goto state 14
	StatementList  goto state 2
	Statement      goto state 3
	Id             goto state 4

State 1


	"return"       shift, and enter state 5
	"if"           shift, and enter state 6
	"for"          shift, and enter state 7
	"while"        shift, and enter state 8
	"print"        shift, and enter state 9
	"read"         shift, and enter state 10
	"use"          shift, and enter state 11
	"set"          shift, and enter state 12
	id             shift, and enter state 13

	StatementList  goto state 2
	Statement      goto state 3
	Id             goto state 4

State 2

	Program -> StatementList . ";" "program" StatementList ";" "end" ";"    (rule 1)
	StatementList -> StatementList . ";" Statement      (rule 4)

	";"            shift, and enter state 48


State 3

	StatementList -> Statement .                        (rule 3)

	";"            reduce using rule 3


State 4

	Statement -> Id . "(" MaybeExpressionList ")"       (rule 6)

	"("            shift, and enter state 47


State 5

	Statement -> "return" . Expression                  (rule 7)

	"("            shift, and enter state 35
	"{"            shift, and enter state 36
	"not"          shift, and enter state 37
	"-"            shift, and enter state 38
	num            shift, and enter state 39
	"true"         shift, and enter state 40
	"false"        shift, and enter state 41
	string         shift, and enter state 42
	id             shift, and enter state 13

	Number         goto state 30
	Bool           goto state 31
	String         goto state 32
	Access         goto state 33
	Id             goto state 18
	Expression     goto state 46

State 6

	Statement -> "if" . Expression "then" StatementList ";" "else" StatementList ";" "end"    (rule 8)
	Statement -> "if" . Expression "then" StatementList ";" "end"    (rule 9)

	"("            shift, and enter state 35
	"{"            shift, and enter state 36
	"not"          shift, and enter state 37
	"-"            shift, and enter state 38
	num            shift, and enter state 39
	"true"         shift, and enter state 40
	"false"        shift, and enter state 41
	string         shift, and enter state 42
	id             shift, and enter state 13

	Number         goto state 30
	Bool           goto state 31
	String         goto state 32
	Access         goto state 33
	Id             goto state 18
	Expression     goto state 45

State 7

	Statement -> "for" . Id "in" Expression "do" StatementList ";" "end"    (rule 10)

	id             shift, and enter state 13

	Id             goto state 44

State 8

	Statement -> "while" . Expression "do" StatementList ";" "end"    (rule 11)

	"("            shift, and enter state 35
	"{"            shift, and enter state 36
	"not"          shift, and enter state 37
	"-"            shift, and enter state 38
	num            shift, and enter state 39
	"true"         shift, and enter state 40
	"false"        shift, and enter state 41
	string         shift, and enter state 42
	id             shift, and enter state 13

	Number         goto state 30
	Bool           goto state 31
	String         goto state 32
	Access         goto state 33
	Id             goto state 18
	Expression     goto state 43

State 9

	Statement -> "print" . ExpressionList               (rule 13)

	"("            shift, and enter state 35
	"{"            shift, and enter state 36
	"not"          shift, and enter state 37
	"-"            shift, and enter state 38
	num            shift, and enter state 39
	"true"         shift, and enter state 40
	"false"        shift, and enter state 41
	string         shift, and enter state 42
	id             shift, and enter state 13

	ExpressionList goto state 29
	Number         goto state 30
	Bool           goto state 31
	String         goto state 32
	Access         goto state 33
	Id             goto state 18
	Expression     goto state 34

State 10

	Statement -> "read" . Access                        (rule 12)

	id             shift, and enter state 13

	Access         goto state 28
	Id             goto state 18

State 11

	Statement -> "use" . DeclarationSeq "in" StatementList ";" "end"    (rule 14)

	"boolean"      shift, and enter state 23
	"number"       shift, and enter state 24
	"matrix"       shift, and enter state 25
	"row"          shift, and enter state 26
	"col"          shift, and enter state 27
	"in"           reduce using rule 15

	DeclarationSeq goto state 19
	DeclarationListgoto state 20
	Declaration    goto state 21
	TypeId         goto state 22

State 12

	Statement -> "set" . Access "=" Expression          (rule 5)

	id             shift, and enter state 13

	Access         goto state 17
	Id             goto state 18

State 13

	Id -> id .                                          (rule 36)

	";"            reduce using rule 36
	","            reduce using rule 36
	":"            reduce using rule 36
	"("            reduce using rule 36
	")"            reduce using rule 36
	"}"            reduce using rule 36
	"["            reduce using rule 36
	"]"            reduce using rule 36
	"then"         reduce using rule 36
	"do"           reduce using rule 36
	"&"            reduce using rule 36
	"|"            reduce using rule 36
	"=="           reduce using rule 36
	"/="           reduce using rule 36
	"<="           reduce using rule 36
	"<"            reduce using rule 36
	">="           reduce using rule 36
	">"            reduce using rule 36
	"+"            reduce using rule 36
	"-"            reduce using rule 36
	"*"            reduce using rule 36
	"/"            reduce using rule 36
	"%"            reduce using rule 36
	"div"          reduce using rule 36
	"mod"          reduce using rule 36
	"'"            reduce using rule 36
	".+."          reduce using rule 36
	".-."          reduce using rule 36
	".*."          reduce using rule 36
	"./."          reduce using rule 36
	".%."          reduce using rule 36
	".div."        reduce using rule 36
	".mod."        reduce using rule 36
	"="            reduce using rule 36
	"in"           reduce using rule 36


State 14

	%start_parse -> Program .                           (rule 0)

	%eof           accept


State 15

	Program -> "program" . StatementList ";" "end" ";"    (rule 2)

	"return"       shift, and enter state 5
	"if"           shift, and enter state 6
	"for"          shift, and enter state 7
	"while"        shift, and enter state 8
	"print"        shift, and enter state 9
	"read"         shift, and enter state 10
	"use"          shift, and enter state 11
	"set"          shift, and enter state 12
	id             shift, and enter state 13

	StatementList  goto state 16
	Statement      goto state 3
	Id             goto state 4

State 16

	Program -> "program" StatementList . ";" "end" ";"    (rule 2)
	StatementList -> StatementList . ";" Statement      (rule 4)

	";"            shift, and enter state 93


State 17

	Statement -> "set" Access . "=" Expression          (rule 5)

	"="            shift, and enter state 92


State 18

	Access -> Id .                                      (rule 35)

	";"            reduce using rule 35
	","            reduce using rule 35
	":"            reduce using rule 35
	")"            reduce using rule 35
	"}"            reduce using rule 35
	"["            reduce using rule 35
	"]"            reduce using rule 35
	"then"         reduce using rule 35
	"do"           reduce using rule 35
	"&"            reduce using rule 35
	"|"            reduce using rule 35
	"=="           reduce using rule 35
	"/="           reduce using rule 35
	"<="           reduce using rule 35
	"<"            reduce using rule 35
	">="           reduce using rule 35
	">"            reduce using rule 35
	"+"            reduce using rule 35
	"-"            reduce using rule 35
	"*"            reduce using rule 35
	"/"            reduce using rule 35
	"%"            reduce using rule 35
	"div"          reduce using rule 35
	"mod"          reduce using rule 35
	"'"            reduce using rule 35
	".+."          reduce using rule 35
	".-."          reduce using rule 35
	".*."          reduce using rule 35
	"./."          reduce using rule 35
	".%."          reduce using rule 35
	".div."        reduce using rule 35
	".mod."        reduce using rule 35
	"="            reduce using rule 35


State 19

	Statement -> "use" DeclarationSeq . "in" StatementList ";" "end"    (rule 14)

	"in"           shift, and enter state 91


State 20

	DeclarationSeq -> DeclarationList . ";"             (rule 16)
	DeclarationList -> DeclarationList . ";" Declaration    (rule 18)

	";"            shift, and enter state 90


State 21

	DeclarationList -> Declaration .                    (rule 17)

	";"            reduce using rule 17


State 22

	Declaration -> TypeId . Id                          (rule 23)
	Declaration -> TypeId . Id "=" Expression           (rule 24)

	id             shift, and enter state 13

	Id             goto state 89

State 23

	TypeId -> "boolean" .                               (rule 37)

	id             reduce using rule 37


State 24

	TypeId -> "number" .                                (rule 38)

	id             reduce using rule 38


State 25

	TypeId -> "matrix" . "(" ExpressionList ")"         (rule 39)

	"("            shift, and enter state 88


State 26

	TypeId -> "row" . "(" Expression ")"                (rule 40)

	"("            shift, and enter state 87


State 27

	TypeId -> "col" . "(" Expression ")"                (rule 41)

	"("            shift, and enter state 86


State 28

	Statement -> "read" Access .                        (rule 12)

	";"            reduce using rule 12


State 29

	Statement -> "print" ExpressionList .               (rule 13)
	ExpressionList -> ExpressionList . "," Expression    (rule 28)

	";"            reduce using rule 13
	","            shift, and enter state 85


State 30

	Expression -> Number .                              (rule 42)

	";"            reduce using rule 42
	","            reduce using rule 42
	":"            reduce using rule 42
	")"            reduce using rule 42
	"}"            reduce using rule 42
	"["            reduce using rule 42
	"]"            reduce using rule 42
	"then"         reduce using rule 42
	"do"           reduce using rule 42
	"&"            reduce using rule 42
	"|"            reduce using rule 42
	"=="           reduce using rule 42
	"/="           reduce using rule 42
	"<="           reduce using rule 42
	"<"            reduce using rule 42
	">="           reduce using rule 42
	">"            reduce using rule 42
	"+"            reduce using rule 42
	"-"            reduce using rule 42
	"*"            reduce using rule 42
	"/"            reduce using rule 42
	"%"            reduce using rule 42
	"div"          reduce using rule 42
	"mod"          reduce using rule 42
	"'"            reduce using rule 42
	".+."          reduce using rule 42
	".-."          reduce using rule 42
	".*."          reduce using rule 42
	"./."          reduce using rule 42
	".%."          reduce using rule 42
	".div."        reduce using rule 42
	".mod."        reduce using rule 42


State 31

	Expression -> Bool .                                (rule 43)

	";"            reduce using rule 43
	","            reduce using rule 43
	":"            reduce using rule 43
	")"            reduce using rule 43
	"}"            reduce using rule 43
	"["            reduce using rule 43
	"]"            reduce using rule 43
	"then"         reduce using rule 43
	"do"           reduce using rule 43
	"&"            reduce using rule 43
	"|"            reduce using rule 43
	"=="           reduce using rule 43
	"/="           reduce using rule 43
	"<="           reduce using rule 43
	"<"            reduce using rule 43
	">="           reduce using rule 43
	">"            reduce using rule 43
	"+"            reduce using rule 43
	"-"            reduce using rule 43
	"*"            reduce using rule 43
	"/"            reduce using rule 43
	"%"            reduce using rule 43
	"div"          reduce using rule 43
	"mod"          reduce using rule 43
	"'"            reduce using rule 43
	".+."          reduce using rule 43
	".-."          reduce using rule 43
	".*."          reduce using rule 43
	"./."          reduce using rule 43
	".%."          reduce using rule 43
	".div."        reduce using rule 43
	".mod."        reduce using rule 43


State 32

	Expression -> String .                              (rule 44)

	";"            reduce using rule 44
	","            reduce using rule 44
	":"            reduce using rule 44
	")"            reduce using rule 44
	"}"            reduce using rule 44
	"["            reduce using rule 44
	"]"            reduce using rule 44
	"then"         reduce using rule 44
	"do"           reduce using rule 44
	"&"            reduce using rule 44
	"|"            reduce using rule 44
	"=="           reduce using rule 44
	"/="           reduce using rule 44
	"<="           reduce using rule 44
	"<"            reduce using rule 44
	">="           reduce using rule 44
	">"            reduce using rule 44
	"+"            reduce using rule 44
	"-"            reduce using rule 44
	"*"            reduce using rule 44
	"/"            reduce using rule 44
	"%"            reduce using rule 44
	"div"          reduce using rule 44
	"mod"          reduce using rule 44
	"'"            reduce using rule 44
	".+."          reduce using rule 44
	".-."          reduce using rule 44
	".*."          reduce using rule 44
	"./."          reduce using rule 44
	".%."          reduce using rule 44
	".div."        reduce using rule 44
	".mod."        reduce using rule 44


State 33

	Expression -> Access .                              (rule 45)

	";"            reduce using rule 45
	","            reduce using rule 45
	":"            reduce using rule 45
	")"            reduce using rule 45
	"}"            reduce using rule 45
	"["            reduce using rule 45
	"]"            reduce using rule 45
	"then"         reduce using rule 45
	"do"           reduce using rule 45
	"&"            reduce using rule 45
	"|"            reduce using rule 45
	"=="           reduce using rule 45
	"/="           reduce using rule 45
	"<="           reduce using rule 45
	"<"            reduce using rule 45
	">="           reduce using rule 45
	">"            reduce using rule 45
	"+"            reduce using rule 45
	"-"            reduce using rule 45
	"*"            reduce using rule 45
	"/"            reduce using rule 45
	"%"            reduce using rule 45
	"div"          reduce using rule 45
	"mod"          reduce using rule 45
	"'"            reduce using rule 45
	".+."          reduce using rule 45
	".-."          reduce using rule 45
	".*."          reduce using rule 45
	"./."          reduce using rule 45
	".%."          reduce using rule 45
	".div."        reduce using rule 45
	".mod."        reduce using rule 45


State 34

	ExpressionList -> Expression .                      (rule 27)
	Expression -> Expression . "+" Expression           (rule 47)
	Expression -> Expression . "-" Expression           (rule 48)
	Expression -> Expression . "*" Expression           (rule 49)
	Expression -> Expression . "/" Expression           (rule 50)
	Expression -> Expression . "%" Expression           (rule 51)
	Expression -> Expression . "div" Expression         (rule 52)
	Expression -> Expression . "mod" Expression         (rule 53)
	Expression -> Expression . ".+." Expression         (rule 54)
	Expression -> Expression . ".-." Expression         (rule 55)
	Expression -> Expression . ".*." Expression         (rule 56)
	Expression -> Expression . "./." Expression         (rule 57)
	Expression -> Expression . ".%." Expression         (rule 58)
	Expression -> Expression . ".div." Expression       (rule 59)
	Expression -> Expression . ".mod." Expression       (rule 60)
	Expression -> Expression . "|" Expression           (rule 61)
	Expression -> Expression . "&" Expression           (rule 62)
	Expression -> Expression . "==" Expression          (rule 63)
	Expression -> Expression . "/=" Expression          (rule 64)
	Expression -> Expression . "<" Expression           (rule 65)
	Expression -> Expression . "<=" Expression          (rule 66)
	Expression -> Expression . ">" Expression           (rule 67)
	Expression -> Expression . ">=" Expression          (rule 68)
	Expression -> Expression . "'"                      (rule 69)
	Expression -> Expression . "[" ExpressionList "]"    (rule 71)

	";"            reduce using rule 27
	","            reduce using rule 27
	":"            reduce using rule 27
	")"            reduce using rule 27
	"}"            reduce using rule 27
	"["            shift, and enter state 53
	"]"            reduce using rule 27
	"&"            shift, and enter state 54
	"|"            shift, and enter state 55
	"=="           shift, and enter state 56
	"/="           shift, and enter state 57
	"<="           shift, and enter state 58
	"<"            shift, and enter state 59
	">="           shift, and enter state 60
	">"            shift, and enter state 61
	"+"            shift, and enter state 62
	"-"            shift, and enter state 63
	"*"            shift, and enter state 64
	"/"            shift, and enter state 65
	"%"            shift, and enter state 66
	"div"          shift, and enter state 67
	"mod"          shift, and enter state 68
	"'"            shift, and enter state 69
	".+."          shift, and enter state 70
	".-."          shift, and enter state 71
	".*."          shift, and enter state 72
	"./."          shift, and enter state 73
	".%."          shift, and enter state 74
	".div."        shift, and enter state 75
	".mod."        shift, and enter state 76


State 35

	Expression -> "(" . Expression ")"                  (rule 73)

	"("            shift, and enter state 35
	"{"            shift, and enter state 36
	"not"          shift, and enter state 37
	"-"            shift, and enter state 38
	num            shift, and enter state 39
	"true"         shift, and enter state 40
	"false"        shift, and enter state 41
	string         shift, and enter state 42
	id             shift, and enter state 13

	Number         goto state 30
	Bool           goto state 31
	String         goto state 32
	Access         goto state 33
	Id             goto state 18
	Expression     goto state 84

State 36

	Expression -> "{" . MatrixList "}"                  (rule 46)

	"("            shift, and enter state 35
	"{"            shift, and enter state 36
	"not"          shift, and enter state 37
	"-"            shift, and enter state 38
	num            shift, and enter state 39
	"true"         shift, and enter state 40
	"false"        shift, and enter state 41
	string         shift, and enter state 42
	id             shift, and enter state 13

	ExpressionList goto state 82
	MatrixList     goto state 83
	Number         goto state 30
	Bool           goto state 31
	String         goto state 32
	Access         goto state 33
	Id             goto state 18
	Expression     goto state 34

State 37

	Expression -> "not" . Expression                    (rule 72)

	"("            shift, and enter state 35
	"{"            shift, and enter state 36
	"not"          shift, and enter state 37
	"-"            shift, and enter state 38
	num            shift, and enter state 39
	"true"         shift, and enter state 40
	"false"        shift, and enter state 41
	string         shift, and enter state 42
	id             shift, and enter state 13

	Number         goto state 30
	Bool           goto state 31
	String         goto state 32
	Access         goto state 33
	Id             goto state 18
	Expression     goto state 81

State 38

	Expression -> "-" . Expression                      (rule 70)

	"("            shift, and enter state 35
	"{"            shift, and enter state 36
	"not"          shift, and enter state 37
	"-"            shift, and enter state 38
	num            shift, and enter state 39
	"true"         shift, and enter state 40
	"false"        shift, and enter state 41
	string         shift, and enter state 42
	id             shift, and enter state 13

	Number         goto state 30
	Bool           goto state 31
	String         goto state 32
	Access         goto state 33
	Id             goto state 18
	Expression     goto state 80

State 39

	Number -> num .                                     (rule 31)

	";"            reduce using rule 31
	","            reduce using rule 31
	":"            reduce using rule 31
	")"            reduce using rule 31
	"}"            reduce using rule 31
	"["            reduce using rule 31
	"]"            reduce using rule 31
	"then"         reduce using rule 31
	"do"           reduce using rule 31
	"&"            reduce using rule 31
	"|"            reduce using rule 31
	"=="           reduce using rule 31
	"/="           reduce using rule 31
	"<="           reduce using rule 31
	"<"            reduce using rule 31
	">="           reduce using rule 31
	">"            reduce using rule 31
	"+"            reduce using rule 31
	"-"            reduce using rule 31
	"*"            reduce using rule 31
	"/"            reduce using rule 31
	"%"            reduce using rule 31
	"div"          reduce using rule 31
	"mod"          reduce using rule 31
	"'"            reduce using rule 31
	".+."          reduce using rule 31
	".-."          reduce using rule 31
	".*."          reduce using rule 31
	"./."          reduce using rule 31
	".%."          reduce using rule 31
	".div."        reduce using rule 31
	".mod."        reduce using rule 31


State 40

	Bool -> "true" .                                    (rule 32)

	";"            reduce using rule 32
	","            reduce using rule 32
	":"            reduce using rule 32
	")"            reduce using rule 32
	"}"            reduce using rule 32
	"["            reduce using rule 32
	"]"            reduce using rule 32
	"then"         reduce using rule 32
	"do"           reduce using rule 32
	"&"            reduce using rule 32
	"|"            reduce using rule 32
	"=="           reduce using rule 32
	"/="           reduce using rule 32
	"<="           reduce using rule 32
	"<"            reduce using rule 32
	">="           reduce using rule 32
	">"            reduce using rule 32
	"+"            reduce using rule 32
	"-"            reduce using rule 32
	"*"            reduce using rule 32
	"/"            reduce using rule 32
	"%"            reduce using rule 32
	"div"          reduce using rule 32
	"mod"          reduce using rule 32
	"'"            reduce using rule 32
	".+."          reduce using rule 32
	".-."          reduce using rule 32
	".*."          reduce using rule 32
	"./."          reduce using rule 32
	".%."          reduce using rule 32
	".div."        reduce using rule 32
	".mod."        reduce using rule 32


State 41

	Bool -> "false" .                                   (rule 33)

	";"            reduce using rule 33
	","            reduce using rule 33
	":"            reduce using rule 33
	")"            reduce using rule 33
	"}"            reduce using rule 33
	"["            reduce using rule 33
	"]"            reduce using rule 33
	"then"         reduce using rule 33
	"do"           reduce using rule 33
	"&"            reduce using rule 33
	"|"            reduce using rule 33
	"=="           reduce using rule 33
	"/="           reduce using rule 33
	"<="           reduce using rule 33
	"<"            reduce using rule 33
	">="           reduce using rule 33
	">"            reduce using rule 33
	"+"            reduce using rule 33
	"-"            reduce using rule 33
	"*"            reduce using rule 33
	"/"            reduce using rule 33
	"%"            reduce using rule 33
	"div"          reduce using rule 33
	"mod"          reduce using rule 33
	"'"            reduce using rule 33
	".+."          reduce using rule 33
	".-."          reduce using rule 33
	".*."          reduce using rule 33
	"./."          reduce using rule 33
	".%."          reduce using rule 33
	".div."        reduce using rule 33
	".mod."        reduce using rule 33


State 42

	String -> string .                                  (rule 34)

	";"            reduce using rule 34
	","            reduce using rule 34
	":"            reduce using rule 34
	")"            reduce using rule 34
	"}"            reduce using rule 34
	"["            reduce using rule 34
	"]"            reduce using rule 34
	"then"         reduce using rule 34
	"do"           reduce using rule 34
	"&"            reduce using rule 34
	"|"            reduce using rule 34
	"=="           reduce using rule 34
	"/="           reduce using rule 34
	"<="           reduce using rule 34
	"<"            reduce using rule 34
	">="           reduce using rule 34
	">"            reduce using rule 34
	"+"            reduce using rule 34
	"-"            reduce using rule 34
	"*"            reduce using rule 34
	"/"            reduce using rule 34
	"%"            reduce using rule 34
	"div"          reduce using rule 34
	"mod"          reduce using rule 34
	"'"            reduce using rule 34
	".+."          reduce using rule 34
	".-."          reduce using rule 34
	".*."          reduce using rule 34
	"./."          reduce using rule 34
	".%."          reduce using rule 34
	".div."        reduce using rule 34
	".mod."        reduce using rule 34


State 43

	Statement -> "while" Expression . "do" StatementList ";" "end"    (rule 11)
	Expression -> Expression . "+" Expression           (rule 47)
	Expression -> Expression . "-" Expression           (rule 48)
	Expression -> Expression . "*" Expression           (rule 49)
	Expression -> Expression . "/" Expression           (rule 50)
	Expression -> Expression . "%" Expression           (rule 51)
	Expression -> Expression . "div" Expression         (rule 52)
	Expression -> Expression . "mod" Expression         (rule 53)
	Expression -> Expression . ".+." Expression         (rule 54)
	Expression -> Expression . ".-." Expression         (rule 55)
	Expression -> Expression . ".*." Expression         (rule 56)
	Expression -> Expression . "./." Expression         (rule 57)
	Expression -> Expression . ".%." Expression         (rule 58)
	Expression -> Expression . ".div." Expression       (rule 59)
	Expression -> Expression . ".mod." Expression       (rule 60)
	Expression -> Expression . "|" Expression           (rule 61)
	Expression -> Expression . "&" Expression           (rule 62)
	Expression -> Expression . "==" Expression          (rule 63)
	Expression -> Expression . "/=" Expression          (rule 64)
	Expression -> Expression . "<" Expression           (rule 65)
	Expression -> Expression . "<=" Expression          (rule 66)
	Expression -> Expression . ">" Expression           (rule 67)
	Expression -> Expression . ">=" Expression          (rule 68)
	Expression -> Expression . "'"                      (rule 69)
	Expression -> Expression . "[" ExpressionList "]"    (rule 71)

	"["            shift, and enter state 53
	"do"           shift, and enter state 79
	"&"            shift, and enter state 54
	"|"            shift, and enter state 55
	"=="           shift, and enter state 56
	"/="           shift, and enter state 57
	"<="           shift, and enter state 58
	"<"            shift, and enter state 59
	">="           shift, and enter state 60
	">"            shift, and enter state 61
	"+"            shift, and enter state 62
	"-"            shift, and enter state 63
	"*"            shift, and enter state 64
	"/"            shift, and enter state 65
	"%"            shift, and enter state 66
	"div"          shift, and enter state 67
	"mod"          shift, and enter state 68
	"'"            shift, and enter state 69
	".+."          shift, and enter state 70
	".-."          shift, and enter state 71
	".*."          shift, and enter state 72
	"./."          shift, and enter state 73
	".%."          shift, and enter state 74
	".div."        shift, and enter state 75
	".mod."        shift, and enter state 76


State 44

	Statement -> "for" Id . "in" Expression "do" StatementList ";" "end"    (rule 10)

	"in"           shift, and enter state 78


State 45

	Statement -> "if" Expression . "then" StatementList ";" "else" StatementList ";" "end"    (rule 8)
	Statement -> "if" Expression . "then" StatementList ";" "end"    (rule 9)
	Expression -> Expression . "+" Expression           (rule 47)
	Expression -> Expression . "-" Expression           (rule 48)
	Expression -> Expression . "*" Expression           (rule 49)
	Expression -> Expression . "/" Expression           (rule 50)
	Expression -> Expression . "%" Expression           (rule 51)
	Expression -> Expression . "div" Expression         (rule 52)
	Expression -> Expression . "mod" Expression         (rule 53)
	Expression -> Expression . ".+." Expression         (rule 54)
	Expression -> Expression . ".-." Expression         (rule 55)
	Expression -> Expression . ".*." Expression         (rule 56)
	Expression -> Expression . "./." Expression         (rule 57)
	Expression -> Expression . ".%." Expression         (rule 58)
	Expression -> Expression . ".div." Expression       (rule 59)
	Expression -> Expression . ".mod." Expression       (rule 60)
	Expression -> Expression . "|" Expression           (rule 61)
	Expression -> Expression . "&" Expression           (rule 62)
	Expression -> Expression . "==" Expression          (rule 63)
	Expression -> Expression . "/=" Expression          (rule 64)
	Expression -> Expression . "<" Expression           (rule 65)
	Expression -> Expression . "<=" Expression          (rule 66)
	Expression -> Expression . ">" Expression           (rule 67)
	Expression -> Expression . ">=" Expression          (rule 68)
	Expression -> Expression . "'"                      (rule 69)
	Expression -> Expression . "[" ExpressionList "]"    (rule 71)
